<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nackademin.foureverhh.locationpractiseyoutube180326.MainActivity">

    <TextView
        android:layout_marginTop="3dp"
        android:id="@+id/tvLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:textSize="18sp"/>

    <TextView
        android:layout_marginTop="3dp"
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:textSize="18sp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_marginTop="3dp"
        android:id="@+id/tvLongitude"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude" />
    <TextView
        android:layout_marginTop="3dp"
        android:id="@+id/longitude"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/longitude" />

    <TextView
        android:layout_marginTop="3dp"
        android:id="@+id/tvAltitude"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altitude" />
    <TextView
        android:layout_marginTop="3dp"
        android:id="@+id/altitude"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/altitude" />

    <TextView
        android:layout_marginTop="3dp"
        android:id="@+id/tvAccuracy"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accuracy" />
    <TextView
        android:layout_marginTop="3dp"
        android:id="@+id/accuracy"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/accuracy" />

    <TextView
        android:layout_marginTop="3dp"
        android:id="@+id/tvSpeed"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed" />
    <TextView
        android:layout_marginTop="3dp"
        android:id="@+id/speed"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/speed" />

    <TextView
        android:layout_marginTop="3dp"
        android:id="@+id/tvSensor"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor" />
    <TextView
        android:layout_marginTop="3dp"
        android:id="@+id/sensor"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sensor_default" />

    <TextView
        android:layout_marginTop="3dp"
        android:id="@+id/tvUpdates"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updates" />
    <TextView
        android:layout_marginTop="3dp"
        android:id="@+id/updates"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/updates_default" />

    <ToggleButton
        android:id="@+id/tbGps_Balanced"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/tb"
        android:textOff="@string/turn_to_pgs"
        android:textOn="@string/turn_to_balanced" />

    <ToggleButton
        android:id="@+id/tvLocationOnOff"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/tb"
        android:textOff="@string/turn_on_location_updates"
        android:textOn="@string/turn_off_location_updates" />


</LinearLayout>
